# s32vsdk

./: .gitignore  ReleaseNotes.txt  consolmake.bat  readme.odt  rebuildlibs.bat
kernels/apu/: CMakeLists.txt
kernels/apu/apexcv_base_arithmetic/: BUILD.mk
kernels/apu/apexcv_base_arithmetic/src/: arithmetic_acf.cpp  arithmetic_acf.h  arithmetic_apu.cpp  arithmetic_apu.h
kernels/apu/apexcv_base_color_conversion/: BUILD.mk
kernels/apu/apexcv_base_color_conversion/src/: color_conversion_acf.cpp  color_conversion_acf.h  color_conversion_apu.cpp  color_conversion_apu.h
kernels/apu/apexcv_base_histogram/: BUILD.mk
kernels/apu/apexcv_base_histogram/src/: histogram_acf.cpp  histogram_acf.h  histogram_apu.cpp  histogram_apu.h
kernels/apu/apexcv_base_image_filters/: BUILD.mk
kernels/apu/apexcv_base_image_filters/src/: image_filters_acf.cpp  image_filters_acf.h  image_filters_apu.cpp  image_filters_apu.h
kernels/apu/apexcv_base_integral_image/: BUILD.mk
kernels/apu/apexcv_base_integral_image/src/: integral_image_acf.cpp  integral_image_acf.h  integral_image_apu.cpp  integral_image_apu.h
kernels/apu/apexcv_base_interpolation/: BUILD.mk
kernels/apu/apexcv_base_interpolation/build-apu-tct-sa-d/: Makefile
kernels/apu/apexcv_base_interpolation/src/: bicubicLUT.h  interpolation_acf.cpp  interpolation_acf.h  interpolation_apu.cpp  interpolation_apu.h
kernels/apu/apexcv_gdc_ldw2/: BUILD.mk
kernels/apu/apexcv_gdc_ldw2/src/: Kernels_Configuration.h  cg_kernel.h  lane_detection_acf.cpp  lane_detection_acf.h  linear_regression_acf.cpp  linear_regression_acf.h  remap_bilinear_acf.cpp  remap_bilinear_acf.h  thresh_val_histogram_acf.cpp  thresh_val_histogram_acf.h  threshold_acf.cpp  threshold_acf.h
kernels/apu/apexcv_pro_affine/: BUILD.mk
kernels/apu/apexcv_pro_affine/src/: affine_definitions.h  affine_transform_acf.cpp  affine_transform_acf.h  affine_transform_apu.cpp  affine_transform_apu.h
kernels/apu/apexcv_pro_aggcf/: BUILD.mk
kernels/apu/apexcv_pro_aggcf/src/: aggcf_acf.cpp  aggcf_acf.h  aggcf_apu.cpp  aggcf_apu.h
kernels/apu/apexcv_pro_blockmatching/: BUILD.mk
kernels/apu/apexcv_pro_blockmatching/src/: blockmatching_acf.cpp  blockmatching_acf.h  blockmatching_apu.cpp  blockmatching_apu.h
kernels/apu/apexcv_pro_brief/: BUILD.mk
kernels/apu/apexcv_pro_brief/src/: brief_acf.cpp  brief_acf.h  brief_apu.cpp  brief_apu.h
kernels/apu/apexcv_pro_canny/: BUILD.mk
kernels/apu/apexcv_pro_canny/src/: canny_acf.cpp  canny_acf.h  canny_apu.cpp  canny_apu.h
kernels/apu/apexcv_pro_fast/: BUILD.mk
kernels/apu/apexcv_pro_fast/build-apu-tct-sa-d/: Makefile
kernels/apu/apexcv_pro_fast/src/: fast_acf.cpp  fast_acf.h  fast_apu.cpp  fast_apu.h
kernels/apu/apexcv_pro_gftt_corners/: BUILD.mk
kernels/apu/apexcv_pro_gftt_corners/src/: gftt_acf.cpp  gftt_acf.h  gftt_apu.cpp  gftt_apu.h
kernels/apu/apexcv_pro_harris_corners/: BUILD.mk
kernels/apu/apexcv_pro_harris_corners/build-apu-nxp-sa-d/: Makefile
kernels/apu/apexcv_pro_harris_corners/src/: harris_acf.cpp  harris_acf.h  harris_apu.cpp  harris_apu.h
kernels/apu/apexcv_pro_histogram_equalization/: BUILD.mk
kernels/apu/apexcv_pro_histogram_equalization/src/: histogram_equalization_acf.cpp  histogram_equalization_acf.h  histogram_equalization_apu.cpp  histogram_equalization_apu.h
kernels/apu/apexcv_pro_hog/: BUILD.mk
kernels/apu/apexcv_pro_hog/src/: hog_acf.cpp  hog_acf.h  hog_apu.cpp  hog_apu.h
kernels/apu/apexcv_pro_hough/: BUILD.mk
kernels/apu/apexcv_pro_hough/src/: cg_kernel.h  hough_acf.cpp  hough_acf.h  hough_apu.cpp  hough_apu.h  hough_config_acf.h
kernels/apu/apexcv_pro_laplacian_pyramid/: BUILD.mk
kernels/apu/apexcv_pro_laplacian_pyramid/src/: laplacian_acf.cpp  laplacian_acf.h  laplacian_apu.cpp  laplacian_apu.h
kernels/apu/apexcv_pro_lbp/: BUILD.mk
kernels/apu/apexcv_pro_lbp/src/: lbp_acf.cpp  lbp_acf.h  lbp_apu.cpp  lbp_apu.h
kernels/apu/apexcv_pro_lkpyramid/: BUILD.mk
kernels/apu/apexcv_pro_lkpyramid/src/: lkpyramid_acf.cpp  lkpyramid_acf.h  lkpyramid_apu.cpp  lkpyramid_apu.h  lkpyramid_setup.h
kernels/apu/apexcv_pro_lktracker/: BUILD.mk
kernels/apu/apexcv_pro_lktracker/src/: lktracker_acf.cpp  lktracker_acf.h  lktracker_apu.cpp  lktracker_apu.h  lktracker_setup.h
kernels/apu/apexcv_pro_orb/: BUILD.mk
kernels/apu/apexcv_pro_orb/src/: orb_acf.cpp  orb_acf.h  orb_apu.cpp  orb_apu.h
kernels/apu/apexcv_pro_pyramid/: BUILD.mk
kernels/apu/apexcv_pro_pyramid/src/: pyramid_acf.cpp  pyramid_acf.h  pyramid_apu.cpp  pyramid_apu.h
kernels/apu/apexcv_pro_remap/: BUILD.mk
kernels/apu/apexcv_pro_remap/src/: cg_kernel.h  common_types.h  remap_acf.cpp  remap_acf.h  remap_apu.cpp  remap_apu.h
kernels/apu/apexcv_pro_resize/: BUILD.mk
kernels/apu/apexcv_pro_resize/src/: cg_kernel.h  passthrough_kernel_acf.cpp  passthrough_kernel_acf.h  resize_acf.cpp  resize_acf.h  resize_apu.cpp  resize_apu.h  resize_definitions.h  resize_definitions_apu.h
kernels/apu/apexcv_pro_tmo/: BUILD.mk
kernels/apu/apexcv_pro_tmo/src/: tmo_acf.cpp  tmo_acf.h  tmo_apu.cpp  tmo_apu.h
kernels/apu/sample_arithmetic_kernels/: BUILD.mk
kernels/apu/sample_arithmetic_kernels/src/: add_acf.cpp  add_acf.h  add_apu.cpp  add_apu.h  difference_acf.cpp  difference_acf.h  difference_apu.cpp  difference_apu.h  dot_division_acf.cpp  dot_division_acf.h  dot_division_apu.cpp  dot_division_apu.h  (+12 more)
kernels/apu/sample_box_generic_kernels/: BUILD.mk
kernels/apu/sample_comparison_kernels/: BUILD.mk  CMakeLists.txt
kernels/apu/sample_conversion_kernels/: BUILD.mk
kernels/apu/sample_display_kernels/: BUILD.mk
kernels/apu/sample_feature_detection_kernels/: BUILD.mk
kernels/apu/sample_filtering_kernels/: BUILD.mk
kernels/apu/sample_geometry_kernels/: BUILD.mk
kernels/apu/sample_morphology_kernels/: BUILD.mk
kernels/apu/sample_object_detection_kernels/: BUILD.mk
kernels/apu/sample_optimization_kernels/: BUILD.mk
kernels/apu/sample_resizing_kernels/: BUILD.mk
kernels/apu/sample_statistics_kernels/: BUILD.mk
libs/utils/common/: BUILD.mk  CMakeLists.txt
libs/utils/matrix/: BUILD.mk  CMakeLists.txt
(+1119 files in other folders)
